fix: edit gap, paddings

--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -61,7 +61,7 @@ body {
 .player_wrapper {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
 }
 .player_info {
   display: flex;
@@ -579,6 +579,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 5px;
+  padding-right: 10px ;
 }
 .tasks::-webkit-scrollbar {
   width: 5px;
@@ -631,7 +632,7 @@ body {
   margin: 0;
 }
 .my_task {
-  max-width: 210px;
+  max-width: 220px;
 }
 .cancel_icon {
   border: none;
